--- a/src/styles.css
+++ b/src/styles.css
@@ -3,4 +3,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: white;
+  font-family: "Segoe UI";
+}
+
+a {
+  text-decoration: none;
 }
