--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,13 +1,13 @@
 <div class="container__big-card">
   <div class="big-card__photo">
     <img
-      src="https://i.stack.imgur.com/luaq2.png"
+      src="https://zonacritica.com.br/wp-content/uploads/2023/07/Personagens-de-Mushoku-Tensei-Jobless-Reincarnation-800x400.webp"
       alt="Imagem de espaço reservado"
       height="200px"
     >
   </div>
   <div class="big-card__title">
-    <h1><a href="#">Saiu a nova versão do Angular</a></h1>
+    <h1><a href="#">Mushoku Tensei - Melhor Anime Isekai</a></h1>
   </div>
   <div class="big-card__description">
     <a href="#">
