--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,17 +1,24 @@
 <div class="container__big-card">
+
   <div class="big-card__photo">
     <img
-      src="https://zonacritica.com.br/wp-content/uploads/2023/07/Personagens-de-Mushoku-Tensei-Jobless-Reincarnation-800x400.webp"
-      alt="Imagem de espaço reservado"
+      src="{{ photoCover }}"
+      alt=""
       height="200px"
+      srcset=""
     >
   </div>
+
   <div class="big-card__title">
-    <h1><a href="#">Mushoku Tensei - Melhor Anime Isekai</a></h1>
+    <h1><a [routerLink]="['content', Id]">{{ cardTitle }}</a></h1>
   </div>
+
   <div class="big-card__description">
-    <a href="#">
-      <p>Lorem ipsum erat libero molestie pulvinar eu sociosqu placerat iaculis, quisque metus vivamus habitasse class hac platea nam et, ullamcorper gravida commodo et habitant elementum orci suscipit. hac turpis consectetur donec sodales dictumst et erat inceptos orci enim erat conubia mollis, egestas ac vivamus rhoncus malesuada arcu dictum luctus suspendisse congue ultrices congue magna, duis massa magna hac ullamcorper ac urna tincidunt at pharetra porta feugiat.</p>
-    </a>
+    <p>
+      <a [routerLink]="['content', Id]">
+          {{ cardDescription }}
+      </a>
+    </p>
   </div>
+
 </div>
