--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,13 @@
-<p>menu-bar works!</p>
+<div class="container__menu-bar">
+  <ul>
+    <li><a href="https://www.linkedin.com/in/alisson-jaques/">Linkedin</a></li>
+    <li><span>•</span></li>
+    <li><a href="https://github.com/alissonjaques">Github</a></li>
+    <li><span>•</span></li>
+    <li>
+      <a href="https://cursos.alura.com.br/vitrinedev/alissonjaques"
+        >Portfólio</a
+      >
+    </li>
+  </ul>
+</div>
