--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,11 +1,35 @@
 <app-menu-title></app-menu-title>
+
 <div class="container__articles">
   <div class="articles__main">
-    <app-big-card></app-big-card>
+    <app-big-card
+      Id="1"
+      photoCover="https://i0.wp.com/metagalaxia.com.br/wp-content/uploads/2021/10/mushoku-tensei-jobless-reincarnation-cour-2-poster-anime-1279378-1280x0-1-1024x536.jpeg?resize=1024%2C536&ssl=1"
+      cardTitle="Mushoku Tensei"
+      cardDescription="Mushoku tensei finalmente ganhará um anime"
+    >
+    </app-big-card>
   </div>
-  <div class="articles_others">
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
+  <div class="articles__others">
+    <app-small-card
+      Id="2"
+      cardTitle="Dragon Ball Super Hero já está disponível"
+      photoCover="https://img.olhardigital.com.br/wp-content/uploads/2023/07/dragon-ball-super-hero-2-07052022-1200x675-1.jpg"
+    >
+    </app-small-card>
+
+    <app-small-card
+      Id="3"
+      cardTitle="Conheça Dorohedoro"
+      photoCover="https://a-static.mlcdn.com.br/450x450/livro-dorohedoro-13/rocketbox/5525p/7c80d617c04b872989fb4c5e2b809f05.jpg"
+    >
+    </app-small-card>
+
+    <app-small-card
+      Id="4"
+      cardTitle="O final de Attack On Titan será o mesmo do mangá? Veja o que esperar"
+      photoCover="https://johto.legiaodosherois.com.br/wp-content/uploads/2021/11/legiao_0uqhje1wFD9S.jpg"
+    >
+    </app-small-card>
   </div>
 </div>
